# CiviQuest

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml  test_final.txt
.hypothesis/tmp/: tmp0a03nw1w  tmp17axtiss  tmp1ga1gbsa  tmp1iv76vv4  tmp236rt9xu  tmp23_1gatx  tmp2ndm7cd4  tmp301n8rhk  tmp313_rn56  tmp39fb1xmc  tmp3jxz8hnb  tmp3w9dv2dn  tmp40c7fnk4  tmp4md4g9ko  tmp4p1m3x_c  tmp5ba9mojq  tmp6jeabh_6  tmp730z57ty  tmp7rj3r3x1  tmp7vxws9g4  tmp8n_lycha  tmp8w2b9up5  tmp9phpj49a  tmp9u7zjnak  tmp9ye2zs6s  tmp_6k8jjt6  tmp_ep2blfa  tmp_k36shsn  tmp_nzy3bty  tmpamg5lwdw  tmpandwzut7  tmpatuzad_l  tmpbnmrosxy  tmpbnw5yx7u  tmpbohwrcuv  tmpcq7jygli  tmpd22eiqsz  tmpdq1g16zm  tmpe6pt1u5h  tmpewc21kol  (+51 more)
.kiro/steering/: api-standard.md  backend-flask-architecture.md  code-conventions.md  frontend-react-vite-architecture.md  general-instructions.md  object-oriented-programming.md  rest-api-best-practices.md  security-policy.md  testing-standards.md  uiux-design-principles.md
app/: __init__.py  main.py
app/common/: __init__.py  deps.py
app/features/: __init__.py
app/infrastructure/: __init__.py
scripts/: __init__.py  fix_dupes.py  gen_modifiers_201_350.py  gen_modifiers_351.py  gen_pronouns.py  reset_and_seed.py  seed.py  seed_content.py  smoke_test.py  update_lessons.py
tests/: conftest.py
tests/common/: __init__.py  test_deps.py  test_middlewares.py  test_schemas.py
tests/features/: __init__.py
tests/infrastructure/: __init__.py  test_database.py  (+3 more)
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+372 files in other folders)
