[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cse-reviewer-system"
version = "0.1.0"
description = "CiviQuest - FastAPI backend for the Civil Service Examination practice platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "CiviQuest Team" }]
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.6,<3",
    "bcrypt>=4.1,<5",
    "pyjwt>=2.8,<3",
    "apscheduler>=3.10,<4",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-mock>=3.12,<4",
    "hypothesis>=6.100,<7",
    "httpx>=0.27,<1",
    "bandit>=1.7,<2",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
